--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <title>Авторизация</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="authorization.css">
+    <link rel="stylesheet" href="../static/login.css">
 </head>
 
 <body>
