Реорганизация файлов; Регистрация немного опрятнее

--- a/Authorization_Registration_PasswordRecovery/templates/login.html
+++ b/Authorization_Registration_PasswordRecovery/templates/login.html
@@ -22,7 +22,7 @@
             </div>
             <input type="submit" value="Войти">
             <a href="#">Забыли пароль?</a>
-            <a href="#">Зарегистрироваться</a>
+            <a href="{{ url_for('register') }}">Зарегистрироваться</a>
         </form>
     </div>
 </body>
