1) Страница для вывода полученного токена заменена на страницу с подтверждением того, что бот успешно подключен и возможностью перейти на главную страницу (её пока нет) и на страницу по подключению тг бота
2) страницы украшены css файлами

3) логика работы программы улучшена

--- a/Telegram/templates/ConnectionPage.html
+++ b/Telegram/templates/ConnectionPage.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Введите токен вашего Telegram бота</title>
-  </head>
-  <body>
-    <h1>Введите токен вашего Telegram бота</h1>
-    <form method="post">
-      <input type="text" name="token" placeholder="Введите токен">
-      <button type="submit">Продолжить</button>
-    </form>
-    <br>
-    <a href="{{ url_for('guide') }}">Гайд по подключению Telegram</a>
-  </body>
+    <link rel="stylesheet" href="{{ url_for('static', filename='ConnectionStyle.css') }}">
+</head>
+<body>
+<h1>Введите токен вашего Telegram бота</h1>
+<form method="post">
+    <div class="center-block">
+        <input type="text" name="token" placeholder="Введите токен" class="error">
+        <span id="error-message"></span>
+        <div class="button-container">
+            <button type="submit">Продолжить</button>
+            <a href="{{ url_for('guide') }}" class="guide-button">Гайд по подключению Telegram</a>
+        </div>
+    </div>
+</form>
+<!--<script>-->
+<!--  function displayError(message) {-->
+<!--    var tokenInput = document.getElementsByName("token")[0];-->
+<!--    var errorMessage = document.getElementById("error-message");-->
+<!--    tokenInput.classList.add("error");-->
+<!--    errorMessage.innerHTML = message;-->
+<!--    errorMessage.style.display = "block";-->
+<!--  }-->
+<!--</script>-->
+</body>
 </html>
