--- a/Telegram/templates/Guide.html
+++ b/Telegram/templates/Guide.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Гайд по подключению Telegram</title>
-  </head>
-  <body>
-    <h1>Гайд по подключению Telegram</h1>
-    <p>Для подключения Telegram бота нужно сделать следующее:</p>
-    <ol>
-      <li>Создать бота через <a href="https://telegram.me/BotFather">BotFather</a>.</li>
-      <li>Получить токен бота.</li>
-      <li>Использовать токен для отправки и получения сообщений через API Telegram.</li>
-    </ol>
-  </body>
+    <link rel="stylesheet" href="{{ url_for('static', filename='Guide.css') }}">
+</head>
+<body>
+<h1>Гайд по подключению Telegram</h1>
+<p>Для подключения Telegram бота нужно сделать следующее:</p>
+<ol>
+    <li>Создать бота через <a href="https://telegram.me/BotFather">BotFather</a>.</li>
+    <li>Получить токен бота.</li>
+    <li>Использовать токен для отправки и получения сообщений через API Telegram.</li>
+</ol>
+</body>
 </html>
