Декомпозиция JS файлов на логические блоки. Добавлены некоторые комментарии к коду. Исправлено отображение нижней панели при переходе от настроек к чатам

--- a/mainInterface/static/css/mainPageStyle.css
+++ b/mainInterface/static/css/mainPageStyle.css
@@ -64,8 +64,7 @@ main {
     }
 
     .toggle-button {
-        display: none;
-        visibility: hidden;
+        left: 30px;
     }
 
     .add-chat-box-btn {
