--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -140,6 +140,7 @@
     right: 0;
     height: 50px;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+    display: inherit;
 }
 
 .paper-clip-button {
