--- a/mainInterface/static/css/register.css
+++ b/mainInterface/static/css/register.css
@@ -44,7 +44,7 @@ h1 {
   font-size: 16px;
 }
 
-.user-box input[type="submit"] {
+.register-button-box input[type="submit"] {
   background-color: #1a73e8;
   color: #fff;
   border: none;
@@ -54,7 +54,7 @@ h1 {
   cursor: pointer;
 }
 
-.user-box input[type="submit"]:hover {
+.register-button-box input[type="submit"]:hover {
   background-color: #0d47a1;
   max-width: 500px;
 }
