--- a/mainInterface/templates/login.html
+++ b/mainInterface/templates/login.html
@@ -14,7 +14,7 @@
     <form method="POST">
         <div class="user-box">
             <input type="text" name="email" required="">
-            <label>Email или Телефон</label>
+            <label>Email</label>
         </div>
         <div class="user-box">
             <input type="password" name="password" required="">
