--- a/mainInterface/templates/register.html
+++ b/mainInterface/templates/register.html
@@ -28,8 +28,8 @@
         <input type="password" name="password" id="password" placeholder="Обязательное поле" required>
     </div>
     <div class="user-box">
-        <label for="confirm-password">Подтвердите пароль</label>
-        <input type="password" name="confirm-password" id="confirm-password" placeholder="Обязательное поле" required>
+        <label for="confirm_password">Подтвердите пароль</label>
+        <input type="password" name="confirm_password" id="confirm_password" placeholder="Обязательное поле" required>
     </div>
     <div class="register-button-box">
         <input type="submit" value="Зарегистрироваться">
