Работа над фронтендом. кнопки, отвечающие за быстрые команды, выбор настроек/чатов/контактов, создание чатов теперь отображают внутреннюю часть не при нажатии, а при наведении курсора на эти кнопки

--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -90,6 +90,9 @@
                 <li class="chat-creation-option">
                     <p class="chat-creation-option-personal">Создать личный чат</p>
                 </li>
+                <li class="chat-creation-option">
+                    <p class="chat-creation-option-personal">Создать групповой чат</p>
+                </li>
             </ul>
         </div>
     </section>
