--- a/mainInterface/static/css/mainPageStyle.css
+++ b/mainInterface/static/css/mainPageStyle.css
@@ -122,6 +122,14 @@ main {
     opacity: 0;
 }
 
+#toggle-reallocation-button:hover ~ #drop-down-reallocation-block #drop-down-reallocation {
+    display: block;
+}
+
+#drop-down-reallocation-block:hover #drop-down-reallocation {
+    display: block;
+}
+
 #drop-down-reallocation-block {
     position: relative;
     display: inline-block;
@@ -139,11 +147,13 @@ main {
 #drop-down-reallocation {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: transparent;
     min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
-    top: 100%;
+    top: -30px;
+    left: -80px;
+    padding: 50px 90px 80px 70px;
+    box-sizing: border-box;
 }
 
 #drop-down-reallocation li {
@@ -151,6 +161,9 @@ main {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    width: 200px;
+    background-color: #f1f1f1;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 #drop-down-reallocation-block.active #drop-down-reallocation {
