--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -156,19 +156,6 @@
     margin-right: 10px;
 }
 
-.bottom-panel #fast-responses-button {
-    background-color: transparent;
-    position: relative;
-    width: 25px;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    float: left;
-
-    margin-right: 5px;
-    margin-left: 10px;
-}
-
 .bottom-panel textarea {
     position: relative;
     width: calc(100% - 80px - 50px - 60px);
@@ -211,11 +198,9 @@
     background-color: #0077b3;
 }
 
-
-#popup-fast-responses-block {
-    position: relative;
-    display: inline-block;
+.bottom-panel #fast-responses-button {
     background-color: transparent;
+    position: relative;
     width: 25px;
     border: none;
     cursor: pointer;
@@ -226,21 +211,48 @@
     margin-left: 10px;
 }
 
+#fast-responses-button:hover + #popup-container {
+    display: block;
+}
+
+#popup-fast-responses-block:hover #popup-container {
+    display: block;
+}
+
+#popup-fast-responses-block {
+    position: relative;
+    display: inline-block;
+    background-color: transparent;
+    width: 25px;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    float: left;
+
+    margin-right: 5px;
+    margin-left: 10px;
+}
+
 #popup-container {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: transparent;
     min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
-    bottom: 100%;
+    bottom: 0;
+    left: -55px;
+    padding: 100px 100px 25px;
+    box-sizing: border-box;
 }
 
 #popup-container li {
     color: black;
-    padding: 12px 16px;
+    padding: 10px 19px;
     text-decoration: none;
     display: block;
+    width: 200px;
+    background-color: #f1f1f1;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 #popup-container li .full-version {
