--- a/mainInterface/static/css/login.css
+++ b/mainInterface/static/css/login.css
@@ -86,3 +86,9 @@ body {
 .login-box form a:hover {
     text-decoration: underline;
 }
+
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+}
