--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/right-chat-block.css">
     <link rel="stylesheet" type="text/css" href="../static/css/Settings.css">
     <link rel="stylesheet" type="text/css" href="../static/css/chat-creation-block.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/Contacts.css">
     <link rel="shortcut icon" href="../static/img/orenComLogo.png"/>
     <title>ОренКом</title>
 </head>
@@ -44,17 +45,17 @@
             </div>
         </div>
         <div class="body-container">
-            <div class="chat-list" id="chat-list">
-                <div class="chat-box" id="Msg">
-                    <div class="chat-img">
+            <div class="left-side-object-list" id="left-side-object-list">
+                <div class="left-side-object-from-list" id="left-side-object-from-list">
+                    <div class="left-side-object-from-list-img">
                         <img src="../static/img/profile-1.png" alt="">
                     </div>
-                    <div class="chat-details">
-                        <div class="chat-title">
+                    <div class="left-side-object-from-list-details">
+                        <div class="left-side-object-from-list-details-title">
                             <h3>alex smith</h3>
                             <span>06:04 PM</span>
                         </div>
-                        <div class="chat-msg">
+                        <div class="left-side-object-from-list-details-subtitle">
                             <p>How to make website using html and css?</p>
                             <span>1</span>
                         </div>
@@ -132,6 +133,7 @@
 <script src="../static/js/reallocationDropDownMenu.js"></script>
 <script src="../static/js/settings.js"></script>
 <script src="../static/js/chatCreationBlock.js"></script>
+<script src="../static/js/Contacts.js"></script>
 </body>
 
 </html>
