--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -96,7 +96,7 @@
     margin-right: auto;
 }
 
-.right-side .container .chat-msg {
+.right-side .container .left-side-object-from-list-details-subtitle {
     /**/
     position: relative;
     top: 1rem;
@@ -108,7 +108,7 @@
     gap: 1rem;
 }
 
-.right-side .container .chat-msg::before {
+.right-side .container .left-side-object-from-list-details-subtitle::before {
     content: "";
     /**/
     position: relative;
@@ -118,11 +118,11 @@
     border-top: 1rem solid var(--whiteColor);
 }
 
-.right-side .container .chat-msg p {
+.right-side .container .left-side-object-from-list-details-subtitle p {
     font-size: 1.6rem;
 }
 
-.right-side .container .chat-msg .time {
+.right-side .container .left-side-object-from-list-details-subtitle .time {
     color: var(--grayColor);
     font-size: 1.2rem;
     margin-top: 1rem;
