--- a/DeleteThisFile/static/style.css
+++ b/DeleteThisFile/static/style.css
@@ -362,7 +362,7 @@ main {
     height: 100%;
     background: url(../../mainInterface/static/img/pattern.svg);
     background-size: contain;
-    opacity: .5;
+    opacity: 0.5;
 }
 
 .content .container {
