--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -132,6 +132,7 @@
 <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
 <script src="../static/js/bottomPanelRightBlockChats/clearMessageButton.js"></script>
 <script src="../static/js/bottomPanelRightBlockChats/popUpMenuFastResponsesBottomPanel.js"></script>
+<script src="../static/js/bottomPanelRightBlockChats/sendMessageButton.js"></script>
 <script src="../static/js/mainPageJS.js"></script>
 <script src="../static/js/onLoad.js"></script>
 <script src="../static/js/reallocationDropDownMenu.js"></script>
