--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -16,6 +16,7 @@
     background: url(../img/pattern.svg);
     background-size: contain;
     opacity: 0.2;
+    z-index: -1;
 }
 
 .right-side .container {
