Немного подчищен код. Добавлено отображение last_seen для чатов с одним пользователем

--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../static/css/mainPageStyle.css">
     <link rel="stylesheet" type="text/css" href="../static/css/right-chat-block.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/Settings.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/settings.css">
     <link rel="stylesheet" type="text/css" href="../static/css/chat-creation-block.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/Contacts.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/contacts.css">
     <link rel="stylesheet" type="text/css" href="../static/css/messages-block.css">
     <link rel="shortcut icon" href="../static/img/orenComLogo.png"/>
     <title>ОренКом</title>
@@ -49,7 +49,7 @@
             <div class="left-side-object-list" id="left-side-object-list">
                 <div class="left-side-object-from-list" id="left-side-object-from-list">
                     <div class="left-side-object-from-list-img">
-                        <img src="../static/img/profile-1.png" alt="">
+                        <img src="../static/img/orenComLogo.png" alt="">
                     </div>
                     <div class="left-side-object-from-list-details">
                         <div class="left-side-object-from-list-details-title">
