--- a/mainInterface/static/css/messages-block.css
+++ b/mainInterface/static/css/messages-block.css
@@ -1,6 +1,6 @@
 #messages-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     background-color: transparent;
     padding: 10px;
     border-radius: 10px;
