--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -130,6 +130,7 @@
     </section>
 </main>
 <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
 <script src="../static/js/bottomPanelRightBlockChats/clearMessageButton.js"></script>
 <script src="../static/js/bottomPanelRightBlockChats/popUpMenuFastResponsesBottomPanel.js"></script>
 <script src="../static/js/bottomPanelRightBlockChats/sendMessageButton.js"></script>
