--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -129,6 +129,10 @@
         </div>
     </section>
 </main>
+<script>
+    const CURRENT_USER_ID = "{{ current_user_id }}";
+    console.log(CURRENT_USER_ID);
+</script>
 <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
 <script src="../static/js/bottomPanelRightBlockChats/clearMessageButton.js"></script>
