--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -109,7 +109,10 @@
 
             </div>
             <div class="bottom-panel" id="right-side-bottom-panel">
-                <button class="paper-clip-button"><i class="fas fa-paperclip"></i></button>
+                <input type="file" id="fileInput" style="display: none;"/>
+                <div id="fileDisplayArea"></div>
+                <button class="paper-clip-button" onclick="document.getElementById('fileInput').click()"><i
+                        class="fas fa-paperclip"></i></button>
                 <div id="popup-fast-responses-block">
                     <button class="fast-responses-button" id="fast-responses-button"><i class="fa-solid fa-book"></i>
                     </button>
