--- a/mainInterface/static/css/contacts.css
+++ b/mainInterface/static/css/contacts.css
@@ -31,15 +31,15 @@
     justify-content: center;
 
     border-radius: 50%;
-    background-color: #555;
+    background-color: #E0C3FC;
     color: #fff;
     font-size: 24px;
     font-weight: bold;
 }
 
 .left-side .left-side-object-list .left-side-object-from-list .left-side-object-from-list-initials-circle span {
-    /*max-width: 100%;*/
-    /*border-radius: 50%;*/
-    /*object-fit: cover;*/
+    max-width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
     text-align: center;
 }
