--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -1,7 +1,9 @@
 .right-side {
     position: relative;
     width: 100%;
-    background: linear-gradient(132deg, #d5d88d 0%, #88b884 100%);
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
     min-width: 400px;
     display: flex;
 }
@@ -13,7 +15,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../img/pattern.svg);
     background-size: contain;
     opacity: 0.2;
     z-index: -1;
@@ -24,11 +25,15 @@
     opacity: 0;
     transition: all .5s ease;
     width: 100%;
+    /*position: relative;*/
+      height: calc(100vh - 100px);
+
 }
 
 .right-side .container.active {
     visibility: visible;
     opacity: 1;
+    /*position: relative;*/
 }
 
 
@@ -142,6 +147,7 @@
     height: 50px;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
     display: inherit;
+    z-index: 1;
 }
 
 .paper-clip-button {
