--- a/mainInterface/static/css/SuccessfulConnection.css
+++ b/mainInterface/static/css/SuccessfulConnection.css
@@ -23,7 +23,7 @@ h1 {
 }
 
 .main-page-button {
-    background-color: #4CAF50;
+    background-color: #E0C3FC;
     border: none;
     color: white;
     padding: 15px 32px;
