--- a/mainInterface/static/css/right-chat-block.css
+++ b/mainInterface/static/css/right-chat-block.css
@@ -273,11 +273,11 @@
 }
 
 #popup-fast-responses-block.active #fast-responses-button {
-    background-color: #3e8e41;
+    background-color: #E0C3FC;
 }
 
 #popup-container li:hover {
-    background-color: #3e8e41;
+    background-color: #E0C3FC;
 }
 
 #chatBoxUserInfo #left-side-object-from-list-initials-circle {
