--- a/mainInterface/templates/mainPage.html
+++ b/mainInterface/templates/mainPage.html
@@ -127,7 +127,7 @@
                     <textarea class="message-input" id="message-input-box" placeholder="Type your message"></textarea>
                     <button class="clear-message-box-button" id="clear-message-box-button">x</button>
                 </label>
-                <button class="send-button" id="send-message-button">Send</button>
+                <button class="send-button" id="send-message-button">Отправить</button>
             </div>
         </div>
     </section>
